Alt fix for flickering card back

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
 /* HEADER  */
 .header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   padding: 0 1.5rem;
   flex-wrap: wrap;
@@ -82,7 +82,6 @@ body {
 
 .card .front {
   left: 0;
-  background-color: #fff;
 }
 
 .card .back {
@@ -94,6 +93,7 @@ body {
   position: absolute;
   padding: 1rem;
   backface-visibility: hidden;
+  background-color: #fff;
 }
 
 .flashcard-options {
